<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp" >

    <Switch
        android:id="@+id/switch_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|start|right"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <TextView
        android:id="@+id/textBootSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/switch_boot"
        android:layout_alignParentLeft="true"
        android:paddingTop="0dp"
        android:text="@string/boot_settings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/line0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/switch_boot"
        android:background="#444444" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/line0"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:minHeight="44dp"
        android:minWidth="80dp"
        android:text="@string/apply_now"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <Button
        android:id="@+id/restore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line0"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/apply_button"
        android:enabled="false"
        android:minHeight="44dp"
        android:minWidth="80dp"
        android:text="@string/restore"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/line0"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:minHeight="44dp"
        android:minWidth="80dp"
        android:text="@string/plus"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line0"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/plus_button"
        android:enabled="true"
        android:minHeight="44dp"
        android:minWidth="80dp"
        android:text="@string/minus"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <TextView
        android:id="@+id/textVoltages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/apply_button"
        android:minHeight="32dp"
        android:paddingTop="10dp"
        android:text="@string/voltages"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#a0a0a0"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/textVoltages"
        android:background="#444444" />

    <ExpandableListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1" />

</RelativeLayout>